--- a/GtalkClient/GtalkClient.csproj
+++ b/GtalkClient/GtalkClient.csproj
@@ -77,6 +77,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UserJabber.cs" />
     <Page Include="ChatWindows.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
